[gd_scene load_steps=6 format=3 uid="uid://citymap001"]

[ext_resource type="Script" path="res://scripts/world/territory_manager.gd" id="1_territory"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orla"]
size = Vector2(1000, 800)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_periferia"]
size = Vector2(800, 1000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_centro"]
size = Vector2(800, 800)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_building"]
size = Vector2(100, 150)

[node name="CityMap" type="Node2D"]

[node name="Ground" type="ColorRect" parent="."]
offset_left = -1000.0
offset_top = -1000.0
offset_right = 3000.0
offset_bottom = 3000.0
color = Color(0.25, 0.25, 0.28, 1)

[node name="Roads" type="Node2D" parent="."]

[node name="RoadH1" type="ColorRect" parent="Roads"]
offset_left = -500.0
offset_top = 980.0
offset_right = 2500.0
offset_bottom = 1020.0
color = Color(0.35, 0.35, 0.35, 1)

[node name="RoadV1" type="ColorRect" parent="Roads"]
offset_left = 980.0
offset_top = -500.0
offset_right = 1020.0
offset_bottom = 2500.0
color = Color(0.35, 0.35, 0.35, 1)

[node name="Territories" type="Node2D" parent="."]
script = ExtResource("1_territory")

[node name="ZonaOrla" type="Area2D" parent="Territories"]
position = Vector2(1500, 400)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Territories/ZonaOrla"]
shape = SubResource("RectangleShape2D_orla")

[node name="Visual" type="ColorRect" parent="Territories/ZonaOrla"]
offset_left = -500.0
offset_top = -400.0
offset_right = 500.0
offset_bottom = 400.0
color = Color(0.2, 0.3, 0.6, 0.25)

[node name="Label" type="Label" parent="Territories/ZonaOrla"]
offset_left = -150.0
offset_top = -380.0
offset_right = 150.0
offset_bottom = -350.0
text = "TERRITORIO COMANDO SOLAR"
horizontal_alignment = 1

[node name="ZonaPeriferia" type="Area2D" parent="Territories"]
position = Vector2(400, 1600)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Territories/ZonaPeriferia"]
shape = SubResource("RectangleShape2D_periferia")

[node name="Visual" type="ColorRect" parent="Territories/ZonaPeriferia"]
offset_left = -400.0
offset_top = -500.0
offset_right = 400.0
offset_bottom = 500.0
color = Color(0.6, 0.2, 0.2, 0.25)

[node name="Label" type="Label" parent="Territories/ZonaPeriferia"]
offset_left = -150.0
offset_top = -480.0
offset_right = 150.0
offset_bottom = -450.0
text = "TERRITORIO TROPA DA PERIFERIA"
horizontal_alignment = 1

[node name="ZonaCentro" type="Area2D" parent="Territories"]
position = Vector2(1000, 1000)
collision_layer = 0
collision_mask = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Territories/ZonaCentro"]
shape = SubResource("RectangleShape2D_centro")

[node name="Visual" type="ColorRect" parent="Territories/ZonaCentro"]
offset_left = -400.0
offset_top = -400.0
offset_right = 400.0
offset_bottom = 400.0
color = Color(0.5, 0.5, 0.5, 0.15)

[node name="Label" type="Label" parent="Territories/ZonaCentro"]
offset_left = -60.0
offset_top = -380.0
offset_right = 60.0
offset_bottom = -350.0
text = "ZONA NEUTRA"
horizontal_alignment = 1

[node name="Buildings" type="Node2D" parent="."]

[node name="Predio1" type="StaticBody2D" parent="Buildings"]
position = Vector2(300, 300)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/Predio1"]
shape = SubResource("RectangleShape2D_building")

[node name="Visual" type="ColorRect" parent="Buildings/Predio1"]
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
color = Color(0.4, 0.4, 0.45, 1)

[node name="Predio2" type="StaticBody2D" parent="Buildings"]
position = Vector2(700, 400)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/Predio2"]
shape = SubResource("RectangleShape2D_building")

[node name="Visual" type="ColorRect" parent="Buildings/Predio2"]
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 80.0
color = Color(0.35, 0.35, 0.4, 1)

[node name="Predio3" type="StaticBody2D" parent="Buildings"]
position = Vector2(1300, 600)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/Predio3"]
shape = SubResource("RectangleShape2D_building")

[node name="Visual" type="ColorRect" parent="Buildings/Predio3"]
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
color = Color(0.3, 0.35, 0.5, 1)

[node name="Predio4" type="StaticBody2D" parent="Buildings"]
position = Vector2(500, 1300)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/Predio4"]
shape = SubResource("RectangleShape2D_building")

[node name="Visual" type="ColorRect" parent="Buildings/Predio4"]
offset_left = -60.0
offset_top = -80.0
offset_right = 60.0
offset_bottom = 80.0
color = Color(0.5, 0.35, 0.35, 1)

[node name="Predio5" type="StaticBody2D" parent="Buildings"]
position = Vector2(1600, 300)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/Predio5"]
shape = SubResource("RectangleShape2D_building")

[node name="Visual" type="ColorRect" parent="Buildings/Predio5"]
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
color = Color(0.3, 0.35, 0.5, 1)

[node name="Predio6" type="StaticBody2D" parent="Buildings"]
position = Vector2(250, 1700)
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/Predio6"]
shape = SubResource("RectangleShape2D_building")

[node name="Visual" type="ColorRect" parent="Buildings/Predio6"]
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
color = Color(0.5, 0.3, 0.3, 1)
